# snecs

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  Makefile  README.md  README.rst  fix_astroid.sh  mypy.ini  pyproject.toml  run_benchmarks.sh  setup.cfg
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  ecs.rst  getting_started.rst  guided_tour.rst  index.rst  license_credits.rst
docs/_static/: style-overrides.css
snecs/: __init__.py  _detail.py  _filters.py  bound_world.py  component.py  ecs.py  filters.py  query.py  typedefs.py  types.py  world.py
snecs/filter_builder/: expressions.py
tests/: conftest.py  test_benchmarks.py  test_component.py  test_ecs.py  test_filter_builder.py  test_implementation_detail.py  test_query.py
