[tool.poetry]
name = "snecs"
version = "0.0.0"
description = "A Straightforward, Nimble ECS for Python"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MPL-2.0"

repository = 'https://github.com/slavfox/snecs'
keywords = ["ECS", "game engine", "gamedev"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = {version = "^0.761", markers = "platform_python_implementation == 'cpython'"}
flake8 = "^3.7.9"
flake8-typing-imports = "^1.5.1"
isort = {version = "^4.3.21", extras = ["pyproject"]}
flake8-comprehensions = "^3.2.2"
flakehell = "^0.3.3"
flake8-logging-format = "^0.6.0"
bump2version = "^1.0.0"
pre-commit = "^2.1.1"
flake8-docstrings = "^1.5.0"
pytest = "^5.3.5"
black = {version = "^19.10b0", markers = "platform_python_implementation == 'cpython'"}
pytest-cov = "^2.8.1"
sphinx = "^2.4.3"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
known_third_party = ["snecs"]
force_to_top = ["typing"]

[tool.flakehell]
format = "grouped"
min_python_version = "3.6.0"
show_source = true
per-file-ignores = [
    "snecs/_detail.py: D105"
]

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-docstrings = [
    "+*",
    # One-line docstring should fit on one line with quotes; arbitrary
    # bullshit with no real purpose.
    "-D200"
]
pylint = [
    "+*",
    "-W0611",  # unused import - triggers false positives on typing imports
    "-W0212"   # access to a protected member
]
flake8-comprehensions = ["+*"]
flake8-logging-format = ["+*"]
flake8-typing-imports = ["+*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
