[tool.poetry]
name = "snecs"
version = "1.1.0"
description = "A straightforward, nimble ECS for Python"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MPL-2.0"
readme = "README.rst"
repository = 'https://github.com/slavfox/snecs'
keywords = ["ECS", "game engine", "gamedev", "entity-component-system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = {version = "^0.761", markers = "platform_python_implementation == 'cpython'"}
flake8 = "^3.7.9"
flake8-typing-imports = "^1.5.1"
isort = {version = "^4.3.21", extras = ["pyproject"]}
flake8-comprehensions = "^3.2.2"
flake8-logging-format = "^0.6.0"
bump2version = "^1.0.0"
pre-commit = "^2.1.1"
flake8-docstrings = "^1.5.0"
pytest = "^5.3.5"
black = {version = "^19.10b0", markers = "platform_python_implementation == 'cpython'"}
# Change pylint to upstream when https://github.com/PyCQA/pylint/pull/3446 gets
# released, and remove explicit astroid dependency
astroid = { git = "https://github.com/PyCQA/astroid.git", rev = "ab9d147"}
pylint = { git = "https://github.com/slavfox/pylint.git", branch = "W0223-narrowing"}
sphinx = { git = "https://github.com/sphinx-doc/sphinx.git", branch = "3.x"}
pytest-cov = "^2.8.1"
# Necessary for flake8 pylint plugin, but we use flake8 in `make lint`
# because of https://github.com/life4/flakehell/issues/34
flakehell = "^0.3.3"
flake8-colors = "^0.1.6"
# For benchmarks
pytest-benchmark = {version = "^3.2.3", extras = ["histogram"]}
esper = "^1.3"
flake8-bugbear = "^20.1.4"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
known_third_party = ["snecs"]
force_to_top = ["typing"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
