[bumpversion]
current_version = 0.0.0

[options]
python_requires = >=3.6

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:snecs/__init__.py]
parse = __version_info__ = \("(?P<major>\d+)", "(?P<minor>\d+)", "(?P<patch>\d+)"\)
serialize = __version_info__ = ("{major}", "{minor}", "{patch}")

[flake8]
ignore =
    # Unused import - triggers false positives on typing imports. F401 is a
    # version of this that doesn't suck. Pyflakes has actually useful errors
    # as opposed to pylint, what a surprise.
    W0611
    # access to a protected member - screw this in general
    W0212
    # One-line docstring should fit on one line with quotes - as far as I
    # can tell, this is completely silly. With 6 characters for quotes and 8
    # for indentation, and wrapping at 72 as PEP-8 recommends, that leaves...
    # 58 characters for the actual summary. I don't feel that makes for a
    # particularly useful summary for anything other than extremely simple
    # methods.
    D200
per-file-ignores =
    # missing docstring - none of this is public, and most of the methods
    # defined there don't even exist at runtime.
    snecs/_detail.py:D10
    # missing docstring in magic method
    snecs/filter_builder/expressions.py:D105
