[options]
python_requires = >=3.6

[flake8]
ignore =
    # access to a protected member - screw this in general
    W0212
    # Line break before binary operator, see:
    # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
    W503
    # Unused import - triggers false positives on typing imports. F401 is a
    # version of this that doesn't suck. Pyflakes has actually useful errors
    # as opposed to pylint, what a surprise.
    W0611
    # Missing docstring in __init__ - this is redundant with the class
    # docstring most of the time.
    D107
    # One-line docstring should fit on one line with quotes - as far as I
    # can tell, this is completely silly. With 6 characters for quotes and 8
    # for indentation, and wrapping at 72 as PEP-8 recommends, that leaves...
    # 58 characters for the actual summary. I don't feel that makes for a
    # particularly useful summary for anything other than extremely simple
    # methods.
    D200
    # First line of function docstring should be in imperative mood; nope,
    # decorators and properties are a thing.
    D401
per-file-ignores =
    # missing docstring - none of this is public, and most of the methods
    # defined there don't even exist at runtime.
    snecs/_detail.py:D10
    # missing docstring in magic method
    snecs/filters.py:D105
    # unused argument
    snecs/filters.py:W0613

[coverage:report]
exclude_lines =
	pragma: no cover
	@abstractmethod
	if TYPE_CHECKING:

[tool:pytest]
addopts = --benchmark-disable
